[workspace.package]
version = "0.13.4"
authors = ["Denis Tsai <dt665m@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/dt665m/lucidstream-rs"

[workspace.dependencies]
log = "0.4"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }

[workspace]
members = [
  "lucidstream",
	# "lucidstream-derive",
  "lucidstream-ges",
  "lucidstream-pg",
  "lucidstream-inmemory",

  "integration-tests"
]
