[package]
name = "integration-tests"
version = "0.6.5"
authors = ["Denis Tsai <dt665m@gmail.com>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
lucidstream-ges = { path = "../lucidstream-ges" }
lucidstream = { path = "../lucidstream" }
malory = "0.1.0"

async-trait = { version = "0.1" }
tokio = { version = "0.2.22", features = ["signal", "rt-core", "rt-threaded", "net", "stream", "time", "macros"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
bytes = { version = "0.5" }

