[package]
name = "integration-tests"
version = "0.10.3"
authors = ["Denis Tsai <dt665m@gmail.com>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
lucidstream-ges = { path = "../lucidstream-ges" }
lucidstream = { path = "../lucidstream" }

log = "0.4"
malory = "0.2.1"
pretty_env_logger = "0.4"
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["signal", "rt-multi-thread", "net", "time", "macros"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1"
bytes = { version = "0.5" }

