[package]
name = "lucidstream-ges"
version = "0.7.5"
authors = ["Denis Tsai <dt665m@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dt665m/lucidstream-rs"
description = "Lucidstream eventstore implementation for www.eventstore.com"

[dependencies]
lucidstream = { path = "../lucidstream" }

log = "0.4"
# eventstore = "0.9.9"
eventstore = { git = "https://github.com/dt665m/EventStoreDB-Client-Rust", rev = "8ef4fce850252ac68fc78ffdb716036513a7ed10" } 
async-trait = "0.1"
thiserror = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
