[package]
name = "lucidstream-ges"
description = "Lucidstream eventstore implementation for www.eventstore.com"
authors.workspace = true
version.workspace = true
edition.workspace = true 
repository.workspace = true 

[dependencies]
lucidstream = { path = "../lucidstream" }

log = { workspace = true }
async-trait = { workspace = true } 
thiserror = { workspace = true } 
serde = { workspace = true, features = ["derive"] }

eventstore = "2.2.0"
#eventstore = { git = "https://github.com/EventStore/EventStoreDB-Client-Rust", rev = "139a4eb274724797a5b22ed25caaefa8d22ad17b" } 
bytes = "1"
serde_json = { version = "1" }
