[package]
name = "lucidstream-inmemory"
version = "0.5.0"
authors = ["Denis Tsai <denistsai@aetheras.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dt665m/lucidstream-rs"
description = "Lucidstream eventstore implementation for www.eventstore.com"

[dependencies]
lucidstream = { path = "../lucidstream" }
async-trait = "0.1"
thiserror = "1" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
