[package]
name = "lucidstream-inmemory"
authors.workspace = true
version.workspace = true
edition.workspace = true 
repository.workspace = true 
description = "Lucidstream eventstore implementation (in memory)"

[dependencies]
lucidstream = { path = "../lucidstream" }

async-trait = { workspace = true } 
thiserror = { workspace = true } 
serde = { workspace = true, features = ["derive"] }

serde_json = "1"
