[package]
name = "lucidstream-pg"
description = "Lucidstream eventstore implementation for postgres"
authors.workspace = true
version.workspace = true
edition.workspace = true 
repository.workspace = true 

[dependencies]
lucidstream = { path = "../lucidstream" }

log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json", "bigdecimal", "decimal", "bit-vec", "migrate"] }
uuid = { version = "1", features = ["serde", "v1", "v4", "v5"] }
serde_json = { version = "1" }

