[package]
name = "lucidstream"
version = "0.1.0"
authors = ["Denis Tsai <dt665m@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dt665m/lucidstream-rs"
description = "Event Sourcing Traits"

[dependencies]
async-trait = { version = "0.1" }
thiserror = { version = "1" }
futures = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
